--- a/11.ini
+++ b/11.ini
@@ -22,7 +22,7 @@ header { background-color: #f0f0f0; padding: 10px; display: flex; justify-conten
 </head>
 <body>
 <header>
-    <img src="href=logo.jpg" alt="Логотип Котакафе Лапка"> 
+    <img src="href=logotip.jpg" alt="Логотип Котакафе Лапка"> 
     <nav>
         <a href="#help">Помочь</a>
         <a href="#contacts">Контакты</a>
